Update _pinboard/2024-07-19-klack.md (via Pages CMS)

--- a/_pinboard/2024-07-19-klack.md
+++ b/_pinboard/2024-07-19-klack.md
@@ -4,3 +4,4 @@ tags: landing page
 link: https://tryklack.com/
 image: /assets/img/pinboard/klack.webp
 ---
+Lots of great little finishing touches and animations.
